# cwms-tools

./: .gitattributes  .gitignore  .mcpbignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  NOTES.md  README.md  cwms-overview.md  evaluation-codex-1.md  manifest.json  plan-eval-fixes.md  prek.toml  pyproject.toml
.agents/skills/agent-friendly-cli/: SKILL.md
.agents/skills/agent-friendly-mcp/: SKILL.md
.claude/skills/agent-friendly-cli/: SKILL.md
.claude/skills/prek/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  mcpb.yml
docs/: mcpb-packaging.md  plan-agent-friendly-hardening.md
docs/superpowers/plans/: 2026-06-06-agent-friendliness-v0.3.0.md
scripts/: gen_manifest.py
src/cwms_tools/: __init__.py
src/cwms_tools/cli/: __init__.py  app.py  exit_codes.py  render.py
src/cwms_tools/cli/commands/: __init__.py  config.py  env.py  fingerprint.py  mcp.py  offices.py  place.py  publisher.py  region.py  schema.py  value.py  whoami.py
src/cwms_tools/core/: __init__.py  _compact.py  _workarounds.py  cache.py  catalog.py  concurrency.py  depth.py  errors.py  fingerprint.py  geo.py  levels.py  locations.py  models.py  offices.py  overview.py  pagination.py  places.py  projects.py  publishers.py  publishers_index.py  rounding.py  session.py  shaping.py  timeseries.py  values.py
src/cwms_tools/data/: __init__.py
src/cwms_tools/mcp/: __init__.py  contract.py  fastmcp_capabilities.py  resources.py  server.py  tools.py
tests/: conftest.py  test_cache.py  test_capability_fingerprint_snapshot.py  test_catalog.py  test_cli_inspection.py  test_cli_mcp_parity.py  test_cli_offices.py  test_cli_place.py  test_cli_polish.py  test_cli_publisher.py  test_cli_smoke.py  test_cli_value.py  test_concurrency.py  test_depth.py  test_error_code_contract.py  test_errors.py  test_fastmcp_capabilities.py  test_fingerprint.py  test_geo.py  test_levels.py  test_manifest.py  test_mcp_server.py  test_mcp_tool_handlers.py  test_models.py  test_offices.py  test_overview.py  test_pagination.py  test_places.py  test_publishers.py  test_publishers_index.py  test_rounding.py  test_seasonal_workaround.py  test_session.py  test_shaping.py  test_values.py
tests/fixtures/: README.md  cda_429_rate_limited.json
