[project]
name = "cwms-tools"
version = "0.3.0"
description = "Agent-friendly tools (MCP server and CLI) for the USACE Corps Water Management System (CWMS) Data API."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Brian Connelly", email = "bdc@bconnelly.net" },
]
keywords = ["cwms", "usace", "mcp", "cli", "water", "hydrology", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cwms-python>=1.0.7",
    "fastmcp>=3",
    "typer>=0.15",
    "pydantic>=2",
    "platformdirs>=4",
    "diskcache>=5",
    "anyio>=4",
    "python-dateutil>=2.9",
]

[project.urls]
Homepage = "https://github.com/briandconnelly/cwms-tools"
Repository = "https://github.com/briandconnelly/cwms-tools"
Issues = "https://github.com/briandconnelly/cwms-tools/issues"
Changelog = "https://github.com/briandconnelly/cwms-tools/blob/main/CHANGELOG.md"

[project.scripts]
cwms-tools = "cwms_tools.cli.app:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-asyncio>=0.24",
    "responses>=0.25",
    "vcrpy>=6",
    "ruff>=0.15",
    "ty>=0.0.1a1",
    "prek>=0.2",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

# --------------------------------------------------------------------------
# Ruff (lint + format)
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "PIE",              # misc
    "RUF",              # ruff-specific
    "PL",               # pylint subset
    "PT",               # pytest style
    "TID",              # tidy imports
    "TCH",              # type-checking imports
    "ARG",              # unused arguments
    "PTH",              # use pathlib
]
ignore = [
    "PLR0913",  # too many arguments — common in API wrappers
    "PLR2004",  # magic value used in comparison — noisy in tests
]

[tool.ruff.lint.per-file-ignores]
# Tests get a permissive lint policy: pytest idioms regularly trip checks meant
# for production code (TID -> inline imports for monkeypatching, PT018 -> compound
# asserts, PLC0415 -> per-test imports), and ruff's en-dash heuristic fires on
# normal English in docstrings.
"tests/**" = ["ARG", "PLR2004", "S101", "TC002", "TC003", "PT018", "PLC0415", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"

# --------------------------------------------------------------------------
# ty (type checker)
# --------------------------------------------------------------------------
[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
# Strict on our own code; permissive on third-party shapes
unresolved-import = "warn"

# --------------------------------------------------------------------------
# pytest
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "integration: live-CDA tests (skipped by default)",
    "slow: slow tests",
]

# --------------------------------------------------------------------------
# coverage
# --------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/cwms_tools"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80  # v0.1.0 floor; raise toward 95 as wrapper-error paths get hit
show_missing = true
